feat(frontend): add SEO build pipeline and homepage layout polish
Add prerendered unit pages, dynamic meta tags, JSON-LD, and sitemap generation with prod-only SEO gating. Tighten homepage catalog grid alignment, spacing, and SEO copy.